workspace = { members = [ "borrowing", "conditionals","datatypes", "functions", "loops", "methods", "ownership", "rectangles", "slices", "structures"] }
[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"  
