workspace = { members = [ "backyard", "borrowing", "conditionals","datatypes", "enums", "functions", "loops", "methods", "ownership", "rectangles", "restaurant", "slices", "structures"] }
[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"  
